# bln-aq

./: .gitignore  README.md  citizen-science-data-collection.py  get_data.ipynb  pod.yaml  pvc.yaml  pyproject.toml
analysis-modeling/: eda.ipynb  gpr-spatiotemporal-interpolation-forecasting.ipynb  gpr-spatiotemporal-interpolation-forecasting.py
analysis-modeling/wandb-experiments/: data_utils.py  evaluate.py  run_experiment.py  train.py
analysis-modeling/wandb-experiments/config/: default.yaml  sweep.yaml
analysis-modeling/wandb-experiments/wandb-checkpoint-cache/: fine-wood-7_final.pt
data/: .gitattributes  2024-citsci-pm2.5-daily.parquet  2024-citsci-pollutants.parquet  chronos-predictions-2024.csv  loc_dict.json
data-engineering/sds011-sensors/: README.md  orchestrate-frontend.sh
data-engineering/sds011-sensors/aggregate/: Dockerfile  README.md  aggregate-job.yaml  aggregate_sds011.py
data-engineering/sds011-sensors/front-end/: Dockerfile  README.md  (+3 more)
examples/: chronos2_kriging_example.py
ingest/: README.md  download-historical-citsci.py
prototyping/analysis-modeling/: eda.ipynb  gpr-spatiotemporal-interpolation-forecasting.ipynb
prototyping/baseline/: baseline.ipynb  baseline.py  dockerfile  job.yaml
prototyping/chronos2/: baseline.py  basic.ipynb  basic.py
prototyping/ingest/: csv-to-parquet.py  data-read-eda.ipynb  pare.py
prototyping/spatial/: thin-plate-spline.ipynb
prototyping/splines/: thin-plate-spline.ipynb
src/: README.md
src/bln_aq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spatiots/: pipeline.py
(+1431 files in other folders)
